force-app/main/default/objects/Gemini_Opty_Log__c/Gemini_Opty_Log__c.object-meta.xml
<CustomObject>
    <description>Store Log Analysis from Gemini Based on MOM</description>
    <label>Gemini Opty Log</label>
    <nameField>
        <displayFormat>GOL-{000}</displayFormat>
        <label>Gemini Opty Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gemini Opty Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>