force-app/main/default/objects/Gemini_Opty_Log__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>Why the call failed (e.g. HTTP 503), and any values that were skipped or shortened on a success.</description>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>