force-app/main/default/objects/Gemini_Opty_Log__c/fields/Event_Id__c.field-meta.xml
<CustomField>
    <fullName>Event_Id__c</fullName>
    <description>The meeting (Event) this call analysed. Text, because a lookup to Event is not possible.</description>
    <label>Event Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>