force-app/main/default/objects/Gemini_Opty_Log__c/fields/Input_Token__c.field-meta.xml
<CustomField>
    <fullName>Input_Token__c</fullName>
    <description>Input tokens of this call. Google prices input and output tokens differently.</description>
    <label>Input Token</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>