force-app/main/default/objects/Gemini_Opty_Log__c/fields/JSON_Log__c.field-meta.xml
<CustomField>
    <fullName>JSON_Log__c</fullName>
    <label>JSON Log</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>