force-app/main/default/objects/Gemini_Opty_Log__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <description>The Gemini model that answered, for comparing models.</description>
    <label>Model</label>
    <length>80</length>
    <type>Text</type>
</CustomField>