force-app/main/default/objects/Gemini_Opty_Log__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Gemini Opty Logs</relationshipLabel>
    <relationshipName>Gemini_Opty_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>