force-app/main/default/objects/Gemini_Opty_Log__c/fields/Output_Token__c.field-meta.xml
<CustomField>
    <fullName>Output_Token__c</fullName>
    <description>Output tokens of this call. Google prices input and output tokens differently.</description>
    <label>Output Token</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>