force-app/main/default/objects/Gemini_Opty_Log__c/fields/Token_Used__c.field-meta.xml
<CustomField>
    <fullName>Token_Used__c</fullName>
    <label>Token Used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>