force-app/main/default/objects/Gemini_Opty_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Status__c</columns>
    <columns>Model__c</columns>
    <columns>Input_Token__c</columns>
    <columns>Output_Token__c</columns>
    <columns>Token_Used__c</columns>
    <columns>Event_Id__c</columns>
    <columns>Error_Message__c</columns>
    <columns>JSON_Log__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>